version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandKeyOpt.rst.txt
.. vale off



:class:`CommandKeyOpt`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandKeyOpt(iKeyOpt: Ansys.Common.Interop.FEParsePlugin_ANSYS.IKeyopt)

   Bases: :py:obj:`object`


   
   Represents a KEYOPT command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandKeyOpt

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Knum`
            - Gets the key option number.
          * - :py:attr:`~Value`
            - Gets the value.







Property detail
---------------
.. py:property:: Knum
   :type: Optional[int]


   
   Gets the key option number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Value
   :type: Optional[int]


   
   Gets the value.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on